# grvl

./: .buildinfo  .ci.yml  .gitignore  CMakeLists.txt  README.md  api-reference.html  examples.html  gbf.hexpat  genindex.html  index.html  introduction.html  js-reference.html  keyboard.html  metadata.html  objects.inv  prefabs-reference.html  quickstart.html  requirements.txt  searchindex.js  widget-api.html  xml-reference.html
.doctrees/: api-reference.doctree  environment.pickle  examples.doctree  index.doctree  introduction.doctree  js-reference.doctree  keyboard.doctree  metadata.doctree  prefabs-reference.doctree  quickstart.doctree  widget-api.doctree  xml-reference.doctree
.github/workflows/: build-deploy-docs.yml
_downloads/70f3653db0bbc5b0db9a23e370554338/: grvl.xsd
_sources/: examples.md.txt  index.md.txt  introduction.md.txt  js-reference.md.txt  keyboard.md.txt  metadata.md.txt  prefabs-reference.md.txt  quickstart.md.txt  widget-api.rst.txt  xml-reference.md.txt
cmake/: Dependencies.cmake  Docs.cmake  FindSphinx.cmake  Findduktape.cmake  StandardProjectSettings.cmake  Tools.cmake  Zephyr.cmake
cmake/config/: Config.cmake.in
docs/: Doxyfile  requirements.txt
docs/src/: api-reference.rst  conf.py  examples.md  index.md  keyboard.md  quickstart.md  xml-reference.md
env_support/: sdl.cmake  zephyr.cmake
examples/js/: callbacks.js
examples/xml/: example.xml  grvl.xsd
gbf/: main.cpp
include/: AbstractButton.h  AbstractView.h  Application.h  Button.h  CallbackDefinition.h  Canvas.h  Checkbox.h  CircleProgressBar.h  Clock.h  Component.h  Container.h  ContentManager.h  CustomView.h  Definitions.h  Division.h  Event.h  File.h  Font.h  Graph.h  GridCanvas.h  GridRow.h  GridView.h  Hash.h  HashFunctions.h  Ico.h  Image.h  ImageContent.h  JSEngine.h  JSObject.h  JSObjectBuilder.h  Key.h  Keyboard.h  KeyboardKey.h  Label.h  ListItem.h  ListView.h  Manager.h  Misc.h  Painter.h  Panel.h  (+17 more)
include/grvl/: AbstractButton.h  AbstractView.h  Alignment.h  Application.h  Blitter.h  Border.h  Button.h  CallbackDefinition.h  Canvas.h  Checkbox.h  CircleProgressBar.h  Clock.h  Container.h  ContentManager.h  CustomView.h  Definitions.h  Division.h  Endian.h  Event.h  File.h  Font.h  Format.h  Graph.h  GridCanvas.h  GridRow.h  GridView.h  Ico.h  Image.h  ImageContent.h  JPEGHelper.h  JSEngine.h  JSObjectBuilder.h  Key.h  Keyboard.h  KeyboardKey.h  Label.h  ListItem.h  ListView.h  Manager.h  Misc.h  (+18 more)
include/grvl/component/: AbstractButton.h  Button.h  Canvas.h  Checkbox.h  CircleProgressBar.h  Clock.h  Component.h  Graph.h  GridCanvas.h  Ico.h  Image.h  KeyboardKey.h  Label.h  ListItem.h  ProgressBar.h  Separator.h  Slider.h  SwitchButton.h  TextInput.h
include/grvl/container/: AbstractView.h  Container.h  CustomView.h  Division.h  GridRow.h  GridView.h  Keyboard.h  ListView.h  Panel.h  Popup.h  ScrollPanel.h  VerticalScrollView.h
include/grvl/platform/: Application.h  Dma2d.h  LinuxDesktopApp.h  LinuxGenericApp.h  LinuxNativeApp.h  PosixApp.h  ZephyrApp.h
include/platform/: LinuxDesktopApp.h  LinuxGenericApp.h  LinuxNativeApp.h  PosixApp.h
samples/: sample.sh
samples/alignment/: CMakeLists.txt  main.cpp
samples/alignment/romfs/: callbacks.js  gui.xml
samples/char_bounding/: CMakeLists.txt  main.cpp
samples/char_bounding/romfs/: gui.xml
samples/connectors/: CMakeLists.txt  README.md
samples/connectors/romfs/: callbacks.js  gui.xml
samples/connectors/src/: main.cpp
samples/image_bounding/: CMakeLists.txt  main.cpp
samples/image_bounding/romfs/: gui.xml
samples/input/: CMakeLists.txt  demo.cpp
samples/input/romfs/: callbacks.js  gui.xml
samples/simple/: CMakeLists.txt
samples/simple/romfs/: callbacks.js  gui.xml
samples/simple/src/: demo.cpp
src/: AbstractButton.cpp  AbstractView.cpp  Application.cpp  Blitter.cpp  Border.cpp  Button.cpp  Checkbox.cpp  CircleProgressBar.cpp  Clock.cpp  Component.cpp  Container.cpp  ContentManager.cpp  CustomView.cpp  Division.cpp  Event.cpp  File.cpp  Font.cpp  Graph.cpp  GridCanvas.cpp  GridRow.cpp  GridView.cpp  Ico.cpp  Image.cpp  ImageContent.cpp  JPEGHelper.c  JSEngine.cpp  JSObject.cpp  JSObjectBuilder.cpp  Key.cpp  Keyboard.cpp  KeyboardKey.cpp  Label.cpp  ListItem.cpp  ListView.cpp  Manager.cpp  Misc.cpp  Mutex.cpp  Painter.cpp  Panel.cpp  ParsingUtils.cpp  (+13 more)
src/component/: AbstractButton.cpp  Button.cpp  Checkbox.cpp  CircleProgressBar.cpp  Clock.cpp  Component.cpp  Graph.cpp  GridCanvas.cpp  Ico.cpp  Image.cpp  KeyboardKey.cpp  Label.cpp  ListItem.cpp  ProgressBar.cpp  Separator.cpp  Slider.cpp  SwitchButton.cpp  TextInput.cpp
src/container/: AbstractView.cpp  Container.cpp  CustomView.cpp  Division.cpp  GridRow.cpp  GridView.cpp  Keyboard.cpp  ListView.cpp  Panel.cpp  Popup.cpp  ScrollPanel.cpp  VerticalScrollView.cpp
src/platform/: Application.cpp  Dma2d.cpp  LinuxDesktop.cpp  LinuxGeneric.cpp  LinuxNative.cpp  Posix.cpp  ZephyrApp.cpp
test/: CMakeLists.txt  button.cpp
xml/: grvl.xsd
zephyr/: CMakeLists.txt  Kconfig  module.yml
